--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../biblioteca palafoxiana/index.html">Inicio</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                 </li>
 				<img class="linea5 hamburguesa-linea" src="images/linea2.png" alt="Descripción de la imagen" style="width: 1px; height: 25px; padding-bottom: 0px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="../biblioteca palafoxiana/html/historia.html">Historia</a>
+                    <a class="nav-link" href="html/historia.html">Historia</a>
                 </li>
 				<img class="linea5 hamburguesa-linea" src="images/linea2.png" alt="Descripción de la imagen" style="width: 1px; height: 25px; padding-bottom: 0px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="../biblioteca palafoxiana/html/publicaciones.html">Publicaciones</a>
+                    <a class="nav-link" href="html/publicaciones.html">Publicaciones</a>
                 </li>
 				<img class="linea5 hamburguesa-linea" src="images/linea2.png" alt="Descripción de la imagen" style="width: 1px; height: 25px; padding-bottom: 0px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="../biblioteca palafoxiana/html/eventos.html">Actividades</a>
+                    <a class="nav-link" href="html/eventos.html">Actividades</a>
                 </li>
 				<img class="linea5 hamburguesa-linea" src="images/linea2.png" alt="Descripción de la imagen" style="width: 1px; height: 25px; padding-bottom: 0px;">
                 <li class="nav-item">
@@ -56,11 +56,11 @@
                 </li>
 				<img class="linea5 hamburguesa-linea" src="images/linea2.png" alt="Descripción de la imagen" style="width: 1px; height: 25px; padding-bottom: 0px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="../biblioteca palafoxiana/html/servicios.html">Servicios</a>
+                    <a class="nav-link" href="html/servicios.html">Servicios</a>
                 </li>
 				<img class="linea5 hamburguesa-linea" src="images/linea2.png" alt="Descripción de la imagen" style="width: 1px; height: 25px; padding-bottom: 0px;">
                 <li class="nav-item">
-                    <a class="nav-link" href="../biblioteca palafoxiana/html/contacto.html">Contacto</a>
+                    <a class="nav-link" href="html/contacto.html">Contacto</a>
                 </li>
             </ul>
         </div>
